deployments/kubernetes/base/order/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: payment-gateway
spec:
  selector:
    app: order
  ports:
    - name: http-metrics
      port: 8087
      targetPort: 8087
    - name: grpc
      port: 50057
      targetPort: 50057
  type: ClusterIP
